<resources>
    <string name="app_name">CatDogApp</string>

    <string name="cat_url">https://api.thecatapi.com/</string>
    <string name="dog_url">https://api.thedogapi.com/</string>
    <string name="api_key">837cbdfc-8e24-4599-b70a-8c3bfd7c299f</string>

    <string name="loading">Loading…</string>
    <string name="try_again">Try again</string>

    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>

    <string name="life_span">Life Span</string>
    <string name="breed_for">Breed For</string>
    <string name="breed_group">Breed Group</string>
    <string name="temperament">Temperament</string>
    <string name="weight_imperial">Weight Imperial</string>
    <string name="weight_metric">Weight Metric</string>
    <string name="height_imperial">Height Imperial</string>
    <string name="height_metric">Height Metric</string>
    <string name="verify_connection">Check your Connection</string>


</resources>
